tests/NormalTests/paczka1/fuzzy1/36061554.err
Error in line 6: AhaIG A819 19,4
Error in line 19: S388 S388 20,6
Error in line 34: NaLhM3l S388 _7_,6
Error in line 35: adbFC2a S67E 3E,9
